CI: update release branch every night
[skip ci]

--- a/.azure-pipelines/azure-pipelines-nightly-update.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-update.yml
@@ -97,6 +97,10 @@ jobs:
 
       git commit -am "Update for v$(version)"
       git push -f -u origin nightly
+
+      git checkout release
+      git reset --hard nightly
+      git push -f -u origin release
     displayName: Update sources
     continueOnError: true
 
