--- a/wheel/pyproject.toml
+++ b/wheel/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = ["matplotlib", "mrcfile", "numpy", "requests", "scipy", "six"]
 license = "BSD-3-Clause-LBNL AND BSD-3-Clause AND BSL-1.0 AND LGPL-2.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MIT AND LGPL-2.0-or-later WITH WxWindows-exception-3.1"
 license-files = ["LICEN[CS]E*.txt"]
 
-description = "The Computational Crystallography Toolbox (cctbx) is being developed as the open source component of the Phenix system. The goal of the Phenix project is to advance automation of macromolecular structure determination. Phenix depends on the cctbx, but not vice versa. This hierarchical approach enforces a clean design as a reusable library. The cctbx is therefore also useful for small-molecule crystallography and even general scientific applications."
+description = "The Computational Crystallography Toolbox (cctbx)"
+readme = "README.md"
 authors = [{name = "CCTBX developers"}]
 maintainers = [{name = "CCTBX developers", email="cctbx@cci.lbl.gov"}]
 
