--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -260,7 +260,7 @@ jobs:
             nproc=4
 
   publish-to-testpypi:
-    if: ${{ github.repository == 'cctbx/cctbx' && github.ref_name == 'master' }}
+    if: ${{ github.repository == 'cctbx/cctbx' && github.ref_name == 'ci' }}
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs: test_pip_packages
     runs-on: ubuntu-latest
@@ -291,6 +291,7 @@ jobs:
       with:
         repository-url: https://test.pypi.org/legacy/
         skip-existing: true
+        verbose: true
 
   publish-to-pypi:
     if: ${{ github.repository == 'cctbx/cctbx' && github.ref_name == 'release' }}
@@ -323,3 +324,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         skip-existing: true
+        verbose: true
