--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -11,12 +11,48 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-15, macos-13, windows-latest]
+        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
+        include:
+          - os: ubuntu-24.04
+            image: quay.io/pypa/manylinux_2_28_x86_64
+          - os: ubuntu-24.04-arm
+            image: quay.io/pypa/manylinux_2_28_aarch64
+          - os: macos-15
+            image: ''
+          - os: macos-13
+            image: ''
+          - os: windows-latest
+            image: ''
 
     name: Converting (${{ matrix.os }}, Python ${{ matrix.python_version }})
     runs-on: ${{ matrix.os }}
+    container:
+      image: ${{ matrix.image }}
+
     steps:
+  #     - name: Install dependencies
+  #       run: yum install curl tar xz
+
+  #     # https://github.com/actions/checkout/issues/1474
+  #     # https://github.com/microsoft/git/pull/719/files#diff-6adb0caabcb504c4b5623b1b5b506967e640f0eabd4dd8f72e5a03e956b5d1feR497-R499
+  #     # Actions use javascript, may need to replace action in the future
+  #     # - name: Replace node20 (linux x86-64)
+  #     #   if: ${{ runner.os == 'Linux' && runner.arch == 'x64' }}
+  #     #   run: |
+  #     #     node_tarball=node-v17.9.1-linux-x64.tar.xz
+
+  #     #     curl -Lo /tmp/node.tar.xz https://nodejs.org/dist/v17.9.1/${node_tarball}
+  #     #     tar -C /tmp/externals/node20 -x --strip-components=1 -f /tmp/node.tar.xz
+
+  #     # - name: Replace node20 (linux arm64)
+  #     #   if: ${{ runner.os == 'Linux' && runner.arch != 'x64' }}
+  #     #   run: |
+  #     #     node_tarball=node-v17.9.1-linux-arm64.tar.xz
+
+  #     #     curl -Lo /tmp/node.tar.xz https://nodejs.org/dist/v17.9.1/${node_tarball}
+  #     #     tar -C /tmp/externals/node20 -x --strip-components=1 -f /tmp/node.tar.xz
+
       - uses: actions/checkout@v4
         with:
           path: cctbx
@@ -92,8 +128,10 @@ jobs:
             ls fixed_wheels
           else
             conda install -y auditwheel
+            AUDITWHEEL_DIR=`python -c "import auditwheel; from pathlib import Path; print(Path(auditwheel.__file__).parent)"`
+            cp ./manylinux-policy.json ${AUDITWHEEL_DIR}/policy/manylinux-policy.json
             export LD_LIBRARY_PATH=${CONDA_PREFIX}/lib
-            auditwheel repair -w fixed_wheels --plat manylinux_2_17_x86_64 ./wheels/cctbx?base*.whl
+            auditwheel repair -w fixed_wheels ./wheels/cctbx?base*.whl
             ls fixed_wheels
           fi
 
@@ -162,148 +200,31 @@ jobs:
           path: ./cctbx/wheel/fixed_wheels/cctbx?base*.whl
           overwrite: true
 
-  convert_conda_packages_linux:
+  test_pip_packages:
+    needs: convert_conda_packages
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm]
+        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
         include:
           - os: ubuntu-24.04
             image: quay.io/pypa/manylinux_2_28_x86_64
           - os: ubuntu-24.04-arm
             image: quay.io/pypa/manylinux_2_28_aarch64
-
-    name: Converting (${{ matrix.os }}, Python ${{ matrix.python_version }})
-    runs-on: ${{ matrix.os }}
-    container:
-      image: ${{ matrix.image }}
-      # volumes:
-      #   - /home/runner/actions-runner/cached/externals:/tmp/externals
-
-    steps:
-      - name: Install dependencies
-        run: yum install curl tar xz
-
-      # https://github.com/actions/checkout/issues/1474
-      # https://github.com/microsoft/git/pull/719/files#diff-6adb0caabcb504c4b5623b1b5b506967e640f0eabd4dd8f72e5a03e956b5d1feR497-R499
-      # Actions use javascript, may need to replace action in the future
-      # - name: Replace node20 (linux x86-64)
-      #   if: ${{ runner.os == 'Linux' && runner.arch == 'x64' }}
-      #   run: |
-      #     node_tarball=node-v17.9.1-linux-x64.tar.xz
-
-      #     curl -Lo /tmp/node.tar.xz https://nodejs.org/dist/v17.9.1/${node_tarball}
-      #     tar -C /tmp/externals/node20 -x --strip-components=1 -f /tmp/node.tar.xz
-
-      # - name: Replace node20 (linux arm64)
-      #   if: ${{ runner.os == 'Linux' && runner.arch != 'x64' }}
-      #   run: |
-      #     node_tarball=node-v17.9.1-linux-arm64.tar.xz
-
-      #     curl -Lo /tmp/node.tar.xz https://nodejs.org/dist/v17.9.1/${node_tarball}
-      #     tar -C /tmp/externals/node20 -x --strip-components=1 -f /tmp/node.tar.xz
-
-      - uses: actions/checkout@v4
-        with:
-          path: cctbx
-
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-          conda-remove-defaults: true
-          miniforge-version: latest
-          python-version: ${{ matrix.python_version }}
-
-      - name: Base environment info
-        run: |
-          conda info
-          conda list
-
-      - name: Install cctbx (cctbx-nightly)
-        if: ${{ github.ref_name != 'release' }}
-        run: |
-          conda install -n test -c cctbx-nightly -y cctbx-base python=${{ matrix.python_version }} libstdcxx=14 libgcc=14 libgfortran=14
-
-      - name: Install cctbx (conda-forge)
-        if: github.ref_name == 'release'
-        run: |
-          conda install -n test -c conda-forge -y cctbx-base python=${{ matrix.python_version }}
-
-      - name: Test environment info
-        run: |
-          conda list -n test
-
-      # Linux and macOS path
-      - name: Create unix package (Linux & macOS)
-        if: runner.os != 'Windows'
-        run: |
-          source ${CONDA}/etc/profile.d/conda.sh
-          conda activate test
-
-          cd cctbx/wheel
-
-          version=`cat ${CONDA_PREFIX}/share/cctbx/cctbx_version.txt`
-          python update_version.py --version=${version}
-
-          rm -f ${HOME}/conda_pkgs_dir/cctbx-base*.conda
-
-          python convert.py --conda-package-path ${HOME}/conda_pkgs_dir/cctbx-base*
-
-          cat pyproject.toml
-
-          ls
-
-      - name: Build unix wheel (Linux & macOS)
-        if: runner.os != 'Windows'
-        run: |
-          source ${CONDA}/etc/profile.d/conda.sh
-          conda activate test
-
-          cd cctbx/wheel
-
-          pip wheel . -w ./wheels
-
-          ls wheels
-
-      - name: Fix unix wheel (Linux & macOS)
-        if: runner.os != 'Windows'
-        run: |
-          source ${CONDA}/etc/profile.d/conda.sh
-          conda activate test
-
-          cd cctbx/wheel
-
-          if [[ "`uname`" == "Darwin" ]]; then
-            conda install -y delocate
-            DYLD_LIBRARY_PATH=${CONDA_PREFIX}/lib delocate-wheel -w fixed_wheels -v ./wheels/cctbx?base*.whl
-            ls fixed_wheels
-          else
-            conda install -y auditwheel
-            AUDITWHEEL_DIR=`python -c "import auditwheel; from pathlib import Path; print(Path(auditwheel.__file__).parent)"`
-            cp ./manylinux-policy.json ${AUDITWHEEL_DIR}/policy/manylinux-policy.json
-            export LD_LIBRARY_PATH=${CONDA_PREFIX}/lib
-            auditwheel -v repair -w fixed_wheels ./wheels/cctbx?base*.whl
-            ls fixed_wheels
-          fi
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.os }}_${{ matrix.python_version }}
-          path: ./cctbx/wheel/fixed_wheels/cctbx?base*.whl
-          overwrite: true
-
-  test_pip_packages:
-    needs: [convert_conda_packages, convert_conda_packages_linux]
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
-        python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
+          - os: macos-15
+            image: ''
+          - os: macos-13
+            image: ''
+          - os: windows-latest
+            image: ''
 
     name: Testing (${{ matrix.os }}, Python ${{ matrix.python_version }})
     runs-on: ${{ matrix.os }}
+    container:
+      image: ${{ matrix.image }}
+
     steps:
       - uses: actions/setup-python@v5
         with:
