CI: TestPyPI push failures are fine
[skip ci]

--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -372,6 +372,7 @@ jobs:
         ls dist
 
     - name: Publish distribution 📦 to TestPyPI
+      continue-on-error: true
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         repository-url: https://test.pypi.org/legacy/
