--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
+        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-15-intel, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
         include:
           - os: ubuntu-24.04
@@ -20,7 +20,7 @@ jobs:
             image: quay.io/pypa/manylinux_2_28_aarch64
           - os: macos-15
             image: ''
-          - os: macos-13
+          - os: macos-15-intel
             image: ''
           - os: windows-latest
             image: ''
@@ -206,7 +206,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
+        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-15-intel, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
         include:
           - os: ubuntu-24.04
@@ -215,7 +215,7 @@ jobs:
             image: quay.io/pypa/manylinux_2_28_aarch64
           - os: macos-15
             image: ''
-          - os: macos-13
+          - os: macos-15-intel
             image: ''
           - os: windows-latest
             image: ''
