--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -210,9 +210,9 @@ jobs:
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
         include:
           - os: ubuntu-24.04
-            image: quay.io/pypa/manylinux_2_28_x86_64
+            image: quay.io/pypa/manylinux_2_28_x86_64:2025.11.29-1
           - os: ubuntu-24.04-arm
-            image: quay.io/pypa/manylinux_2_28_aarch64
+            image: quay.io/pypa/manylinux_2_28_aarch64:2025.11.29-1
           - os: macos-15
             image: ''
           - os: macos-15-intel
