--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         channel: [conda-forge, cctbx-nightly]
         os: [ubuntu-latest, ubuntu-24.04-arm, macos-15, macos-15-intel, windows-latest]
-        python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
+        python_version: ["3.10", 3.11, 3.12, 3.13, 3.14]
 
     name: Testing (${{ matrix.channel }}, ${{ matrix.os }}, Python ${{ matrix.python_version }})
     runs-on: ${{ matrix.os }}
