--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15, macos-15-intel, windows-latest]
-        python_version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
+        python_version: ["3.10", 3.11, 3.12, 3.13, 3.14]
         include:
           - os: ubuntu-24.04
             image: quay.io/pypa/manylinux_2_28_x86_64
